--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Dashboard</title>
   </head>
   <body>
+    <div id="portal-root"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
